--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
    <!--<img src="/images/banderaDeMeta.png " id="banderaMeta"> --> 
     <div id="objetos"> 
      
-      <img src="/images/objetos/palobueno.png" id="imagenPalo">
+      <img src="/images/objetos/paloBuenoB.png" id="imagenPalo">
        <img src="/images/objetos/piedra.png" id="imagenPiedra">
       <img src="/images/objetos/placasolarBuenaB.png" id="imagenPlacasolar"> 
+
     
     </div>
+    <img src="/images/objetos/inventarioPixel.png" id="inventario">
     <div id="personaje">
       <img src="/images/personaje/personajeDetras.gif" id="imagenPersonaje">
     </div>
