--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     
     </div>
-    <img src="/images/objetos/inventarioPixel.png" id="inventario">
+   <!-- <img src="/images/objetos/inventarioPixel.png" id="inventario">--> 
     <div id="personaje">
       <img src="/images/personaje/personajeDetras.gif" id="imagenPersonaje">
     </div>
