--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
 </head>
 
 <body>
+  <div id="malik">
+      <img src="/images/Malik-removebg-preview.png" alt="">
+    </div>
+    <img src="/images/speechBubble2 (1).gif" id="malikTexto">
+   <!--- <div id="textoMalik">Ayúdame a recuperar los materiales</div>  -->
   <div id="game">
     <!--<img src="/images/banderaDeMeta.png " id="banderaMeta"> -->
+    
     <div id="objetos">
-      <!--
-      <img src="/images/objetos/paloBuenoB.png" id="imagenPalo">
+      <!--<img src="/images/objetos/paloBuenoB.png" id="imagenPalo">
        <img src="/images/objetos/piedra.png" id="imagenPiedra">
-      <img src="/images/objetos/placasolarBuenaB.png" id="imagenPlacasolar"> 
--->
-
+      <img src="/images/objetos/placasolarBuenaB.png" id="imagenPlacasolar"> -->
     </div>
     <!-- <img src="/images/objetos/inventarioPixel.png" id="inventario">
-
    <img src="/images/objetos/inventarioPixel.png" id="inventario"> -->
-
     <div id="personaje">
       <img src="/images/personaje/personajeDetras.gif" id="imagenPersonaje">
     </div>
